--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+# PDF Table Extractor - Virtual Environment Dependencies
+# Install these packages ONLY in the virtual environment to keep your system clean
+#
+# Setup Instructions:
+# 1. Create virtual environment: python -m venv pdf_env
+# 2. Activate environment: .\pdf_env\Scripts\Activate.ps1 (Windows) or source pdf_env/bin/activate (macOS/Linux)
+# 3. Install dependencies: pip install -r requirements.txt
+# 4. Install Java system-wide (see JAVA_SETUP.md)
+
 # Core dependencies for PDF table extraction
 pandas>=1.3.0
 tabula-py>=2.5.0
+jpype1>=1.4.0
 
 # Optional dependencies for advanced table detection
 # Uncomment the following lines if you want to use camelot-py
